@@ -1,3 +1,8 @@
+2023-01-25 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCval.c:
+	  Type fixes (fixing regressions visible on 32-bit big-endian hosts), partial fix for bug #3539.
+
 2023-01-24 Philipp Klaus Krause <pkk AT spth.de>
 
 	* doc/sdccman.lyx,
